--- a/package.json
+++ b/package.json
@@ -47,62 +47,62 @@
 	},
 	"dependencies": {
 		"@ltd/j-toml": "^1.38.0",
-		"@napi-rs/canvas": "^0.1.44",
-		"@sapphire/cron": "^1.1.1",
-		"@sapphire/decorators": "^6.0.2",
-		"@sapphire/discord.js-utilities": "^7.0.2",
-		"@sapphire/framework": "4.7.2",
-		"@sapphire/plugin-logger": "^3.0.6",
+		"@napi-rs/canvas": "^0.1.52",
+		"@sapphire/cron": "^1.1.3",
+		"@sapphire/decorators": "^6.1.0",
+		"@sapphire/discord.js-utilities": "^7.2.0",
+		"@sapphire/framework": "4.8.5",
+		"@sapphire/plugin-logger": "^3.0.7",
 		"@sapphire/plugin-scheduled-tasks": "^7.1.2",
 		"@sapphire/plugin-subcommands": "4.3.0",
-		"@sapphire/result": "^2.6.4",
-		"@sapphire/stopwatch": "^1.5.0",
+		"@sapphire/result": "^2.6.6",
+		"@sapphire/stopwatch": "^1.5.2",
 		"@sapphire/type": "^2.4.1",
-		"@sapphire/utilities": "^3.13.0",
-		"@sentry/node": "^7.80.0",
-		"@skyra/env-utilities": "^1.2.1",
+		"@sapphire/utilities": "^3.15.3",
+		"@sentry/node": "^7.112.2",
+		"@skyra/env-utilities": "^1.3.0",
 		"bufferutil": "^4.0.8",
-		"bullmq": "^4.13.2",
-		"clashofclans.js": "^3.1.2",
+		"bullmq": "^4.17.0",
+		"clashofclans.js": "^3.3.8",
 		"colorette": "^2.0.20",
-		"discord-api-types": "^0.37.63",
-		"discord.js": "^14.13.0",
+		"discord-api-types": "^0.37.83",
+		"discord.js": "^14.14.1",
 		"figlet": "^1.7.0",
 		"fuse.js": "^6.6.2",
 		"gradient-string": "^2.0.2",
-		"ioredis": "^5.3.2",
+		"ioredis": "^5.4.1",
 		"markdown-table": "^3.0.3",
-		"nanoid": "^5.0.3",
-		"postgres": "^3.4.3",
-		"reflect-metadata": "^0.1.13",
-		"string-strip-html": "^13.4.3",
-		"undici": "^6.10.2",
+		"nanoid": "^5.0.7",
+		"postgres": "^3.4.4",
+		"reflect-metadata": "^0.1.14",
+		"string-strip-html": "^13.4.8",
+		"undici": "^6.15.0",
 		"utf-8-validate": "^6.0.3",
 		"zlib-sync": "^0.1.9"
 	},
 	"devDependencies": {
-		"@commitlint/cli": "^18.4.1",
-		"@commitlint/config-conventional": "^18.4.0",
+		"@commitlint/cli": "^18.6.1",
+		"@commitlint/config-conventional": "^18.6.3",
 		"@sapphire/prettier-config": "^2.0.0",
-		"@sapphire/ts-config": "^5.0.0",
-		"@swc/core": "^1.3.96",
+		"@sapphire/ts-config": "^5.0.1",
+		"@swc/core": "^1.4.17",
 		"@types/figlet": "^1.5.8",
-		"@types/gradient-string": "^1.1.5",
-		"@types/node": "^20.9.0",
-		"@typescript-eslint/eslint-plugin": "^6.10.0",
-		"@typescript-eslint/parser": "^6.10.0",
+		"@types/gradient-string": "^1.1.6",
+		"@types/node": "^20.12.7",
+		"@typescript-eslint/eslint-plugin": "^6.21.0",
+		"@typescript-eslint/parser": "^6.21.0",
 		"cz-conventional-changelog": "^3.3.0",
-		"eslint": "^8.53.0",
+		"eslint": "^8.57.0",
 		"eslint-config-snail": "^2.0.0",
 		"eslint-formatter-pretty": "^5.0.0",
 		"ley": "^0.8.1",
-		"lint-staged": "^15.1.0",
-		"prettier": "^3.0.3",
-		"tsup": "^7.2.0",
-		"typescript": "^5.2.2"
+		"lint-staged": "^15.2.2",
+		"prettier": "^3.2.5",
+		"tsup": "^8.0.2",
+		"typescript": "^5.4.5"
 	},
 	"packageManager": "yarn@4.0.1",
 	"engines": {
-		"node": ">=20.0.0"
+		"node": ">=20.0.0,<21.0.0"
 	}
 }
