--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -14,7 +14,6 @@ jobs:
   Publish:
     name: Publish docker image
     runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, '[skip cd]')"
     steps:
       - name: Checkout Project
         uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4
@@ -36,3 +35,16 @@ jobs:
           file: Dockerfile
           push: true
           tags: ghcr.io/r-priyam/goblin:latest
+  DeployBot:
+    name: Deploy bot to server
+    runs-on: ubuntu-latest
+    needs: Publish
+    steps:
+      - name: Update container on server
+        uses: favware/ssh-remote-action@v1
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USERNAME }}
+          command: ${{ secrets.SSH_COMMAND }}
+          password: ${{ secrets.SSH_PASSWORD }}
+        #   silent: true
