--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
 		"ley": "^0.8.1",
 		"lint-staged": "^15.2.10",
 		"prettier": "^3.3.3",
-		"tsup": "^8.3.5",
+		"tsup": "8.0.0",
 		"typescript": "^5.7.2"
 	},
 	"packageManager": "yarn@4.5.2",
