--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
 		"markdown-table": "^3.0.4",
 		"nanoid": "^5.0.9",
 		"postgres": "^3.4.5",
+		"radash": "^12.1.0",
 		"reflect-metadata": "^0.2.2",
 		"string-strip-html": "^13.4.8",
 		"undici": "^6.21.0",
