--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
 		"@skyra/env-utilities": "^1.3.0",
 		"bufferutil": "^4.0.8",
 		"bullmq": "^5.29.1",
-		"clashofclans.js": "^3.3.18",
+		"clashofclans.js": "^3.3.19",
 		"colorette": "^2.0.20",
 		"discord-api-types": "^0.37.109",
 		"discord.js": "^14.16.3",
@@ -74,6 +74,7 @@
 		"markdown-table": "^3.0.4",
 		"nanoid": "^5.0.9",
 		"postgres": "^3.4.5",
+		"radash": "^12.1.0",
 		"reflect-metadata": "^0.2.2",
 		"string-strip-html": "^13.4.8",
 		"undici": "^6.21.0",
