--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"@sapphire/cron": "^1.2.1",
 		"@sapphire/decorators": "^6.1.1",
 		"@sapphire/discord.js-utilities": "^7.3.2",
+		"@sapphire/duration": "^1.2.0",
 		"@sapphire/framework": "5.3.2",
 		"@sapphire/plugin-logger": "^4.0.2",
 		"@sapphire/plugin-scheduled-tasks": "^10.0.2",
